--- a/RazorPages/RazorPages/Pages/Categories/Delete.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/Delete.cshtml
@@ -24,11 +24,10 @@
     <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#1A2238">
         <div class="text-center" style="margin-top:25%;margin-right:50px;">
             <div class="mt-4">
-                <label style="font-weight:bolder;text-align:left;font-size:large" asp-for="Category"></label>:
                 <input asp-for="Category" disabled>
             </div>
             <br> <br>
-            <button id="isWorking" type="submit" class="btn btn-danger" disabled><i class="bi bi-trash3-fill">Delete</i></button>
+            <button id="isWorking" type="submit" class="btn btn-danger"  disabled><i class="bi bi-trash3-fill" style="font-style:normal"> Delete</i></button>
         </div>
     </form>
 }
