--- a/RazorPages/RazorPages/Pages/Categories/Edit.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/Edit.cshtml
@@ -4,12 +4,11 @@
     <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#1A2238">
         <div class="text-center" style="margin-top:25%;margin-right:50px;">
             <div class="mt-4">
-                <label style="font-weight:bolder;text-align:left;font-size:large" asp-for="Category"></label>:
                 <input asp-for=Category>
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <br> <br>
-            <button type="submit" class="btn btn-success"><i class="bi bi-check">Edit</i></button>
+            <button type="submit" class="btn btn-success" ><i class="bi bi-check" style="font-style:normal"> Edit</i></button>
         </div>
     </form>
 }
