--- a/RazorPages/RazorPages/Pages/Recipes/Create.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Create.cshtml
@@ -18,26 +18,26 @@
     <br />
     <body style="background-color:#252f3e;">
     </body>
-    <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#1A2238">
+    <form method="post" class="align-content-center col-6" style="margin:auto;text-align:center;margin-top:50px;color:#66FCF1">
         <div>
             <div class="row mt-4 col-11 m-auto">
-                <label style="font:bolder;text-align:left" asp-for="Recipe.Title" class="fw-bold"></label>
+                <label style="text-align:left" asp-for="Recipe.Title" ></label>
                 <input asp-for="Recipe.Title" class="form-control">
                 <span asp-validation-for="Recipe.Title" class="text-danger"></span>
             </div>
             <div class="row mt-4 col-11 m-auto">
-                <label style="font:bolder;text-align:left" asp-for="Recipe.Ingredients" class="fw-bold"></label>
+                <label style="text-align:left" asp-for="Recipe.Ingredients"></label>
                 <textarea name="Recipe.Ingredients" placeholder="After every ingredient press enter for new line." rows="5" cols="30"></textarea>
                 <span asp-validation-for="Recipe.Ingredients" class="text-danger"></span>
             </div>
             <div class="row mt-4 col-11 m-auto">
-                <label style="font:bolder;text-align:left" asp-for="Recipe.Instructions" class="fw-bold"></label>
+                <label style="text-align:left" asp-for="Recipe.Instructions" ></label>
                 <textarea name="Recipe.Instructions" placeholder="After every instructions press enter for new line." rows="5" cols="30"></textarea>
                 <span asp-validation-for="Recipe.Instructions" class="text-danger"></span>
             </div>
             <div class="row mt-4 col-11 m-auto">
                 <form method="post">
-                    <label style="text-align:left" asp-for="Recipe.Categories" class="fw-bold">Choose one or more category</label>
+                    <label style="text-align:left" asp-for="Recipe.Categories">Choose one or more category</label>
                     <br>
                     <select name="Recipe.Categories" id="cars" multiple style="color:black">
                         @foreach (var obj in Model.Categories)
@@ -49,7 +49,7 @@
                     <span asp-validation-for="Recipe.Categories" class="text-danger"></span>
                 </form>
             </div>
-            <button type="submit" class="btn btn-success"><i class="bi bi-plus-circle-fill"> Create</i></button>
+            <button type="submit" class="btn btn-success"><i class="bi bi-plus-circle-fill" style="font-style:normal"> Create</i></button>
             <br><br>
         </div>
     </form>
