--- a/RazorPages/RazorPages/Pages/Categories/Create.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/Create.cshtml
@@ -19,12 +19,11 @@
     <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#1A2238">
         <div class="text-center" style="margin-top:25%;margin-right:50px;">
             <div class="mt-4">
-                <label style="font-weight:bolder;text-align:left;font-size:large" asp-for="Category"></label>:
-                <input asp-for="Category">
+                <input asp-for="Category" placeholder="Enter category name">
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
-            <br> <br>
-            <button type="submit" class="btn btn-success text-center"><i class="bi bi-check">Create</i></button>
+            <br><br>
+            <button type="submit" class="btn btn-success text-center"><i class="bi bi-check" style="font-style:normal"> Create</i></button>
         </div>
     </form>
 }
