--- a/RazorPages/RazorPages/Pages/Home.cshtml
+++ b/RazorPages/RazorPages/Pages/Home.cshtml
@@ -1,18 +1,42 @@
 ﻿@page
 @model RazorPages.Pages.HomeModel
 @{
-    <body class="bg"
-                  style="background-image:url('../bg.jpg') ;">
-    </body>
-    <div class="bgimg-1 w3-display-container w3-opacity-min divCenter" id="home">
-                <div class="w3-display-middle divCenter" style="white-space:nowrap;">
-                    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Welcome <span class="w3-hide-small">in</span> Yum City </span>
+    <div class="row row-cols-1 row-cols-md-2 g-2 text-center">
+        <div class="col" style="width:400px;height:500px;margin-left:100px;margin-top:25px;border-style:groove;border-color:#66FCF1">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="~/Food1.jpg" class="d-block w-100" style="height:350px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="~/Food2.jpg" class="d-block w-100" style="height:350px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="~/Food3.jpg" class="d-block w-100" style="height:350px;">
+                    </div>
                 </div>
-    </div>
-    <div class="bgimg-1 w3-display-container w3-opacity-min divCenter " id="home">
-                <div class="w3-display-middle divCenter" style="white-space:nowrap;margin-top: 150px;">
-                    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Where you <span class="w3-hide-small">will know</span> all about cooking</span>
+            </div>
+            <div>
+                <h4 style="color:#C5C6C7;text-align:center;margin-top:15px;font-family:'Square Peg',cursive;">cook what you love</h4>
+                <a style="background-color:#1F2833;color:#C5C6C7;margin-top:25px" class="btn" asp-area="" asp-page="/Recipes/ListRecipes">Recipes</a>
+            </div>
+        </div>
+        <div class="col" style="width:400px;height:500px;margin-left:300px;margin-top:25px;border-style:groove;border-color:#66FCF1">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="~/Cat1.jpg" class="d-block w-100" style="height:350px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="~/Cat2.jpg" class="d-block w-100" style="height:350px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="~/Cat3.jpg" class="d-block w-100" style="height:350px;">
+                    </div>
                 </div>
+            </div>
+            <h4 style="color:#C5C6C7;text-align:center;margin-top:15px;font-family:'Square Peg',cursive;">discover different cultures</h4>
+            <a style="background-color:#1F2833;color:#C5C6C7;margin-top:25px" class="btn" asp-area="" asp-page="/Categories/ListCategories">Categories</a>
+        </div>
     </div>
-
 }
