--- a/RazorPages/RazorPages/Pages/Recipes/Delete.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Delete.cshtml
@@ -21,38 +21,38 @@
     })
 </script>
 @{
-    <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#1A2238">
-        <div>
-            <div class="row mt-4 col-11 m-auto">
-                <label style="text-align:left;font-weight:bold;font-size:large" asp-for="Recipe.Title"></label>
-                <input asp-for="Recipe.Title" disabled>
-            </div>
-            <div class="row mt-4 col-11 m-auto">
-                <label style="font:bolder;text-align:left" asp-for="Recipe.Ingredients" class="fw-bold"></label>
-                @foreach (var obj in @Model.Recipe.Ingredients)
+    <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#66FCF1">
+            <div>
+                <div class="row mt-4 col-11 m-auto">
+                    <label style="text-align:left;font-size:large" asp-for="Recipe.Title"></label>
+                    <input asp-for="Recipe.Title" disabled>
+                </div>
+                <div class="row mt-4 col-11 m-auto">
+                    <label style="text-align:left;font-size:large" asp-for="Recipe.Ingredients"></label>
+                    @foreach (var obj in @Model.Recipe.Ingredients)
                 {
-                    <input asp-for=@obj disabled>
-                    <br>
+                        <input asp-for=@obj disabled>
+                        <br>
                 }
-            </div>
-            <div class="row mt-4 col-11 m-auto">
-                <label style="text-align:left;font-weight:bold;font-size:large" asp-for="Recipe.Instructions" class="fw-bold"></label>
-                @foreach (var obj in @Model.Recipe.Instructions)
+                </div>
+                <div class="row mt-4 col-11 m-auto">
+                    <label style="text-align:left;font-size:large" asp-for="Recipe.Instructions"></label>
+                    @foreach (var obj in @Model.Recipe.Instructions)
                 {
-                    <input asp-for=@obj disabled>
-                    <br>
+                        <input asp-for=@obj disabled>
+                        <br>
                 }
-            </div>
-            <div class="row mt-4 col-11 m-auto">
-                <label style="text-align:left;font-weight:bold;font-size:large"  asp-for="Recipe.Categories" class="fw-bold">Choose one or more category</label>
-                @foreach (var obj in @Model.Recipe.Categories)
+                </div>
+                <div class="row mt-4 col-11 m-auto">
+                    <label style="text-align:left;font-size:large"  asp-for="Recipe.Categories">Choose one or more category</label>
+                    @foreach (var obj in @Model.Recipe.Categories)
                 {
-                    <input asp-for=@obj disabled>
-                    <br>
+                        <input asp-for=@obj disabled>
+                        <br>
                 }
+                </div>
+                <br>
+                <button id="isWorking" type="submit" class="btn btn-danger" disabled><i class="bi bi-trash3-fill" style="font-style:normal"> Delete</i></button>
             </div>
-            <br>
-            <button id="isWorking" type="submit" class="btn btn-danger" disabled><i class="bi bi-trash3-fill">Delete</i></button>
-        </div>
     </form>
 }
