--- a/RazorPages/RazorPages/Pages/Recipes/ListRecipes.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/ListRecipes.cshtml
@@ -17,55 +17,55 @@
 @model RazorPages.Pages.Recipes.ListRecipesModel
 @{
     <div class="row row-cols-1 row-cols-md-4 g-2 text-center">
-                @foreach (var recipe in @Model.Recipes)
+        @foreach (var recipe in @Model.Recipes)
         {
-                    <div class="col">
-                        <div class="card h-100 text-center" style="background-color:#252f3e;margin-left:2px;margin-top:5px;">
-                            <div class="card-body">
-                                <h5 class="card-title">@recipe.Title</h5>
-                                <button class="btn " style="background-color:#F4DB7D;color:black;" type="button" data-bs-toggle="collapse" data-bs-target=@("#"+"ing"+recipe.Id) aria-expanded="false" aria-controls=@("ing"+recipe.Id)>
-                                    <i class="bi bi-search fst-normal"> Show Ingredients</i>
-                                </button>
-                                <div class="collapse text-start" id=@("ing"+recipe.Id) style="color:white">
-                                    @foreach (var ing in @recipe.Ingredients)
+            <div class="col">
+                <div class="card h-100 text-center" style="background-color:transparent;margin-left:2px;margin-top:5px;margin-right:50px;border:groove;border-color:#66FCF1;">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color:white">@recipe.Title</h5>
+                        <button style="background-color:#45A29E;color:black;margin-top:10px;font-style:normal" class="text-center" type="button" data-bs-toggle="collapse" data-bs-target=@("#"+"ing"+recipe.Id) aria-expanded="false" aria-controls=@("ing"+recipe.Id)>
+                            <i class="bi bi-search fst-normal" style="font-style:normal"> Show Ingredients</i>
+                        </button>
+                        <div class="collapse text-start" id=@("ing"+recipe.Id) style="color:white">
+                            @foreach (var ing in @recipe.Ingredients)
                             {
-                                        <p class="card-text">- @ing</p>
+                                <p class="card-text">- @ing</p>
                             }
-                                </div>
-                                <br>
-                                <button class="btn" style="background-color:#F4DB7D;color:black;margin-top:10px;" type="button" data-bs-toggle="collapse" data-bs-target=@("#"+"ins"+recipe.Id) aria-expanded="false" aria-controls=@("ins"+recipe.Id)>
-                                    <i class="bi bi-search fst-normal"> Show Instructions</i>
-                                </button>
-                                <div class="collapse text-start" id=@("ins"+recipe.Id) style="color:white">
-                                    @foreach (var ins in @recipe.Instructions)
-                            {
-                                        <p class="card-text">- @ins</p>
-                            }
-                                </div>
-                                <br>
-                                <button class="btn" style="background-color:#F4DB7D;color:black;margin-top:10px;" type="button" data-bs-toggle="collapse" data-bs-target=@("#"+"cat"+recipe.Id) aria-expanded="false" aria-controls=@("cat"+recipe.Id)>
-                                    <i class="bi bi-search fst-normal"> Show Categories</i>
-                                </button>
-                                <div class="collapse text-start" id=@("cat"+recipe.Id) style="color:white">
-                                    @foreach (var cat in @recipe.Categories)
-                            {
-                                        <p class="card-text">- @cat</p>
-                            }
-                                </div>
-                                <br>
-                                <a asp-page="Edit" asp-route-id="@recipe.Id" class="btn text-end" style="background-color:#FF6A3D;color:white;margin-top:10px;">
-                                    <i class="bi bi-pencil-square"> Edit</i>
-                                </a>
-                                <a asp-page="Delete" asp-route-id="@recipe.Id" class="btn text-end btn-danger" style="margin-top:10px;">
-                                    <i class="bi bi-trash"> Delete</i>
-                                </a>
-                            </div>
                         </div>
+                        <br>
+                        <button style="background-color:#45A29E;color:black;margin-top:10px;font-style:normal" class="text-center" type="button" data-bs-toggle="collapse" data-bs-target=@("#"+"ins"+recipe.Id) aria-expanded="false" aria-controls=@("ins"+recipe.Id)>
+                            <i class="bi bi-search fst-normal" style="font-style:normal"> Show Instructions</i>
+                        </button>
+                        <div class="collapse text-start" id=@("ins"+recipe.Id) style="color:white">
+                            @foreach (var ins in @recipe.Instructions)
+                            {
+                                <p class="card-text">- @ins</p>
+                            }
+                        </div>
+                        <br>
+                        <button style="background-color:#45A29E;color:black;margin-top:10px;font-style:normal" class="text-center" type="button" data-bs-toggle="collapse" data-bs-target=@("#"+"cat"+recipe.Id) aria-expanded="false" aria-controls=@("cat"+recipe.Id)>
+                            <i class="bi bi-search fst-normal" style="font-style:normal"> Show Categories</i>
+                        </button>
+                        <div class="collapse text-start" id=@("cat"+recipe.Id) style="color:white">
+                            @foreach (var cat in @recipe.Categories)
+                            {
+                                <p class="card-text">- @cat</p>
+                            }
+                        </div>
+                        <br>
+                        <a asp-page="Edit" asp-route-id="@recipe.Id" class="btn btn-dark" style="background-color:#1F2833;color:#C5C6C7;margin-top:10px;font-style:normal">
+                            <i class="bi bi-pencil-square" style="font-style:normal"> Edit</i>
+                        </a>
+                        <a asp-page="Delete" asp-route-id="@recipe.Id" class="btn btn-danger" style="color:#C5C6C7;margin-top:10px;font-style:normal">
+                            <i class="bi bi-trash" style="font-style:normal"> Delete</i>
+                        </a>
                     </div>
+                </div>
+            </div>
         }
     </div>
     <div class="text-center mt-3">
-                <a asp-page="Create" class="btn" style="background-color:#252f3e;color:#FF6A3D;font-weight:bold;"><i class="bi bi-plus-square"> Create new recipe</i></a>
+        <a asp-page="Create" style="background-color:#252f3e;color:white;margin-top:50px;" class="btn text-center"><i class="bi bi-plus-square" style="font-style:normal"> Create new recipe</i></a>
     </div>
 }
 
