--- a/RazorPages/RazorPages/Pages/Shared/_Layout.cshtml
+++ b/RazorPages/RazorPages/Pages/Shared/_Layout.cshtml
@@ -18,18 +18,17 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg" style="height:60px; background-color: #252f3e">
+        <nav class="navbar navbar-expand-lg" style="height:60px;">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarColor03">
                     <ul class="navbar-nav me-auto">
-                        <li style="margin-left:25px;margin-top:20px;">
+                        <li style="margin-top:30px;">
                             <div class="logo-holder logo-5">
                                 <a class="nav-link text-light" asp-page="/Home">
                                     <h3>Yum</h3>
                                     <p>City</p>
                                 </a>
                             </div>
-                        </li>
                         <li class="nav-item" style="margin-left:1050px;margin-top:25px;">
                             <a class="nav-link text-light" style="font-size:x-large;" asp-area="" asp-page="/Categories/ListCategories">Categories</a>
                         </li>
@@ -53,8 +52,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/BackGroundChanger.js"></script>
-    <script src="sweetalert2.all.min.js"></script>
+@*    <script src="~/js/BackGroundChanger.js"></script>
+*@    <script src="sweetalert2.all.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
